Fix text overflow styling for product tile

--- a/app/styles/scss/_product-tile.scss
+++ b/app/styles/scss/_product-tile.scss
@@ -95,6 +95,7 @@
         line-height: 1.5;
     }
     .product-tile-name {
+        display: -webkit-box;
         margin: 0;
         padding: 0 20px 0.25em 20px;
         height: 42px;
@@ -102,6 +103,9 @@
         font-weight: 500;
         line-height: 1.2;
         overflow: hidden;
+        text-overflow: ellipsis;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
     }
     .product-tile-quickview {
         display: block;
